releases/v0.4.6/default_bundle/assets/project_skeleton/00-项目包模板/01-模块执行包/模块模板/01-PRD/02-模块流程图与人类确认.md
# 模块流程图与人类确认

## 1. 文档信息

- 文档名称：模块流程图与人类确认
- 适用模块：`<模块名>`
- 适用阶段：原型前准入 / 人类阅读收口
- 文档定位：正式下游文件

## 2. 使用边界与分类口径

- 模块 `PRD` 真源固定为 `01-模块执行包/<模块名>/01-PRD/01-模块PRD.md`。
- 本文件是正式下游文件，不是第二套模块真源。
- `80-完整提交包/` 只做阅读入口，不得反向充当模块真源。
- `功能规则精炼卡` 只做关键规则核对与真源回链，不重写 `4.2 / 4.2A / 4.3 / 4.4 / 7` 的正式规则正文。

## 3. 面向原型的页面流转流程图

- 页面编号：P-LIST-01
- 页面名称：列表页
- 终端类型：手机端 / PC端 / 管理后台 / 通用
- 当前态角色：游客 / 已登录用户 / 审核员
- 关键分支：进入详情、命中限制、无结果回流
- 返回路径：详情页返回列表页；表单页取消返回列表页
- 成功出口：列表页 -> 详情页 -> 成功结果页
- 失败 / 限制 / 空态出口：空态页、限制提示、失败结果页

```mermaid
flowchart LR
    A[P-LIST-01 列表页 / 入口态] -->|点击新建| B[P-FORM-01 新建页 / 编辑态]
    B -->|提交成功| C[P-RESULT-01 结果页 / 成功态]
    A -->|点击详情| D[P-DETAIL-01 详情页 / 浏览态]
    D -->|点击返回| A
    B -->|点击返回| A
    B -->|校验失败| E[P-LIMIT-01 限制提示 / 阻断态]
    A -->|无结果| F[P-EMPTY-01 空态页]
```

## 4. 面向 `PRD` 的功能型点击流程图

### 4.1 搜索功能型点击流程图

```mermaid
flowchart TD
    A[输入关键词] -->|点击搜索| B{命中规则判断}
    B -->|命中结果| C[展示搜索结果]
    B -->|无结果| D[展示空态]
```

### 4.2 提交功能型点击流程图

```mermaid
flowchart TD
    A[填写表单] -->|点击提交| B{字段校验}
    B -->|校验通过| C[进入成功结果态]
    B -->|校验失败| D[展示限制提示]
```

## 5. 功能规则精炼卡

### 5.1 搜索功能规则精炼卡

- `功能动作`：搜索
- `规则点清单`：
  - 关键词为空时不给请求
  - 命中后进入结果态或空态
- `每个规则点的真源锚点`：
  - 关键词为空时不给请求 -> `01-模块执行包/<模块名>/01-PRD/01-模块PRD.md#4.2-search-empty-keyword`
  - 命中后进入结果态或空态 -> `01-模块执行包/<模块名>/01-PRD/01-模块PRD.md#4.2-search-result-routing`
- `缺口说明`：搜索无结果文案、弱网降级提示仍待冻结
- `缺口影响`：若文案或降级规则未冻结，原型评审对空态与失败态的判断会失真
- `相关页面状态 / 结果状态`：结果态、空态、弱网失败提示态
- `是否需要后台 / 他角色承接`：需要后台搜索接口
- 规则核对说明：本卡只核对搜索动作对应的规则点与真源锚点，不在此重写 `PRD` 正文。
- `真源回链`：`01-模块执行包/<模块名>/01-PRD/01-模块PRD.md#4.2`

### 5.2 提交功能规则精炼卡

- `功能动作`：提交
- `规则点清单`：
  - 字段校验通过后才能提交
  - 校验失败时停留当前页并提示
- `每个规则点的真源锚点`：
  - 字段校验通过后才能提交 -> `01-模块执行包/<模块名>/01-PRD/01-模块PRD.md#4.2A-submit-validation-pass`
  - 校验失败时停留当前页并提示 -> `01-模块执行包/<模块名>/01-PRD/01-模块PRD.md#4.2A-submit-validation-block`
- `缺口说明`：提交接口超时后的补偿提示仍待确认
- `缺口影响`：若补偿提示未冻结，成功态与挂起态的 prototype 承接会不一致
- `相关页面状态 / 结果状态`：成功结果态、限制提示态、挂起提示态
- `是否需要后台 / 他角色承接`：需要后台创建接口
- 规则核对说明：本卡只核对提交动作对应的规则点与真源锚点，不在此重写 `PRD` 正文。
- `真源回链`：`01-模块执行包/<模块名>/01-PRD/01-模块PRD.md#4.2A`

## 6. 面向 `PRD` 的纯交互点击流程图

### 6.1 Tab 切换纯交互点击流程图

```mermaid
flowchart LR
    A[默认 Tab] -->|点击已完成| B[已完成 Tab]
    B -->|点击全部| A
```

## 7. 人类确认

### 7.1 原型前总控准入

- 原型前总控必须确认本文件已落盘、已回链模块 `PRD` 真源，且页面流转、功能型点击流程图、纯交互点击流程图内容已足够支撑进入原型链。
- 原型设计前置顺序固定为：`聊天内低保真预演 -> 人确认 -> 最小正式回执 -> 原型设计`。
- 聊天内低保真预演必须给页面化粗稿，允许形式为 `页面块图`、`线框块图`、`ASCII 页面草图`。
- 只给页面清单、状态清单、文字提纲，不能算完成低保真预演。
- 若本文件缺失、未回链或只剩阅读层摘要，总控不得放行原型执行。
- 本文件不得替代正式 `PRD`。
- 本文件不得替代 `4.3 页面合同清单`。
- 本文件不得替代 `4.4 结构化契约字段清单`。

### 7.1A 聊天内低保真预演

| 字段 | 填写内容 |
|------|------|
| 预演形式 | `页面块图 / 线框块图 / ASCII 页面草图` |
| 预演内容 | |
| 覆盖页面 / 状态 / 字段 / 验收 | |
| 是否只是页面清单、状态清单或文字提纲 | `是 / 否` |

### 7.1B 人确认

| 字段 | 填写内容 |
|------|------|
| 人是否已确认低保真预演 | `是 / 否` |
| 确认范围 | |
| 待确认缺口 | |

### 7.1C 低保真最小正式回执

| 字段 | 填写内容 |
|------|------|
| low_fidelity_preview_artifact | |
| low_fidelity_preview_allowed_formats | `page_block_diagram / wireframe_block_diagram / ascii_page_sketch` |
| low_fidelity_preview_format | 填写本轮实际单一格式之一 |
| low_fidelity_human_confirmation | `true / false` |
| low_fidelity_minimal_formal_receipt | |
| prototype_design_entry_allowed | `true / false` |
| prototype_presentation_boundary_forbidden_items | 说明层主导、内部字段泄漏、手机端横向展示板等本轮禁止项 |
| prototype_presentation_boundary_default_items | 产品界面优先、单屏手机体验、声明交互真实承接等本轮默认项 |
| prototype_presentation_boundary_exceptions | 本轮经人确认的例外项；没有例外也必须填写空列表 |

- 低保真最小正式回执未形成时，不得进入 `11 / 13 / 14` 的原型设计。
- 呈现边界三块只记录进入原型设计前的人确认结果，不把低保真加重成完整原型设计。

### 7.2 产品审查质量兜底

- 产品审查必须在原型执行前完成，且结论已回收到总控；缺少产品审查回执或结论，不得进入 `11 / 13 / 14`。
- 产品审查只核对 `4.X` 与 `5.X` 是否一一对应、关键规则是否可被人理解、回链是否指向 `PRD` 真源，不在本文件里重写 `PRD` 正文规则。
- 本文件不得替代 `21-审查-产品审查` 回执或结论。

## 8. 真源回链与待确认项

| 字段 | 填写内容 |
|------|------|
| canonical backlink | `01-模块执行包/<模块名>/01-PRD/01-模块PRD.md` |
| linked_prd_source | `01-模块执行包/<模块名>/01-PRD/01-模块PRD.md` |

- `canonical backlink` 与 `linked_prd_source` 都必须回到当前模块 `PRD` 真源。
- `linked_prd_source` 不得指向 `80-完整提交包/` 展示层。
- 待确认项：
  - 高风险规则是否仍有未冻结值
  - 页面流转是否仍存在未覆盖出口
